# NaviFormer

./: README.md
DataBase/: .gitignore  mongod.conf
Evaluator/BC/: evaluate.py  nn
Evaluator/CQL/: evaluate.py  nn
Evaluator/CQL/envs/env/: yaml_env.py
Evaluator/CQL/envs/utils/: reset_helper.py
Evaluator/CQL/src/drl_nav/drl_nav/: CMakeLists.txt  package.xml
Evaluator/DT/: .gitignore  evaluate.py  nn
Evaluator/DWA/: .gitignore  evaluate.py
Evaluator/DWA/dwa/: __init__.py  dwa_pyconfig.py  dwa_utils.py
Evaluator/NaviFormer/: README.md  evaluate.py  net_param.py  nn
Evaluator/NaviFormer/pursuit/: DWPursuit.py  PurePursuit.py  __init__.py
Evaluator/PPO/drlnav_frame/: RealTest_Readme.md
Evaluator/Path/: evaluate.py
Evaluator/Path/astar/: __init__.py  prm_astar.py
Evaluator/Path/dwa/: dwa_utils.py
Exp-Generator/DWA-Generator/: DWA-Generate.py
Exp-Generator/DWA-Generator/dwa/: dwa_pyconfig.py
Exp-Generator/PPO-Generator/drlnav_frame/: .gitignore
Exp-Generator/SCAND-Generator/Pre-Process/: bags_to_mongodb.py  process.py
Trainer/BC/: train.py
Trainer/BC/data/: __init__.py  dataset.py
Trainer/BC/nn/: BC.py  __init__.py  prenet.py
Trainer/CQL/: train.py
Trainer/CQL/data/: dataset.py
Trainer/CQL/nn/: CQL.py  __init__.py  prenet.py
Trainer/DT/: train.py
Trainer/DT/data/: dataset.py
Trainer/DT/nn/: __init__.py  decisiontransformer.py  prenet.py
Trainer/NaviFormer/: train.py
Trainer/NaviFormer/data/: dataset.py
Trainer/NaviFormer/nn/: __init__.py  naviGPT.py  prenet.py
Utilize/: CheckExp.py  DockerCMD  Dockerfile  MoveData.py
(+167 files in other folders)
